# line-persona

./: README.md  build_corpus.py  inference.py  parse_chatlog.py  pyproject.toml  select_speaker.py  train.py
